// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots with all options 1`] = `
<div
  className="FilterStudentsBar EscapeListener"
  onKeyUp={[Function]}
>
  <div
    className="FilterBar"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "marginRight": 10,
          }
        }
      >
        Filter by
      </span>
      <input
        onChange={[Function]}
        placeholder="Search 74 students..."
        style={
          Object {
            "border": "1px solid #ccc",
            "borderRadius": 4,
            "display": "inline-block",
            "fontSize": 14,
            "marginLeft": 20,
            "marginRight": 10,
            "padding": "7px 7px 7px 12px",
            "width": 220,
          }
        }
        value=""
      />
      <div
        className="Select is-searchable Select--single"
      >
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "marginLeft": 10,
              "width": "10em",
            }
          }
        >
          <span
            className="Select-multi-value-wrapper"
            id="react-select-14--value"
          >
            <div
              className="Select-placeholder"
            >
              Grade...
            </div>
            <div
              className="Select-input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-activedescendant="react-select-14--value"
                aria-expanded="false"
                aria-haspopup="false"
                aria-owns=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={false}
                role="combobox"
                style={
                  Object {
                    "boxSizing": "content-box",
                    "width": "5px",
                  }
                }
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}
          >
            <span
              className="Select-arrow"
              onMouseDown={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        className="Select is-searchable Select--single"
      >
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "marginLeft": 10,
              "width": "10em",
            }
          }
        >
          <span
            className="Select-multi-value-wrapper"
            id="react-select-15--value"
          >
            <div
              className="Select-placeholder"
            >
              House...
            </div>
            <div
              className="Select-input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-activedescendant="react-select-15--value"
                aria-expanded="false"
                aria-haspopup="false"
                aria-owns=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={false}
                role="combobox"
                style={
                  Object {
                    "boxSizing": "content-box",
                    "width": "5px",
                  }
                }
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}
          >
            <span
              className="Select-arrow"
              onMouseDown={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        className="Select is-searchable Select--single"
      >
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "marginLeft": 10,
              "width": "10em",
            }
          }
        >
          <span
            className="Select-multi-value-wrapper"
            id="react-select-16--value"
          >
            <div
              className="Select-placeholder"
            >
              Counselor...
            </div>
            <div
              className="Select-input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-activedescendant="react-select-16--value"
                aria-expanded="false"
                aria-haspopup="false"
                aria-owns=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={false}
                role="combobox"
                style={
                  Object {
                    "boxSizing": "content-box",
                    "width": "5px",
                  }
                }
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}
          >
            <span
              className="Select-arrow"
              onMouseDown={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots without options 1`] = `
<div
  className="FilterStudentsBar EscapeListener"
  onKeyUp={[Function]}
>
  <div
    className="FilterBar"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "marginRight": 10,
          }
        }
      >
        Filter by
      </span>
      <input
        onChange={[Function]}
        placeholder="Search 74 students..."
        style={
          Object {
            "border": "1px solid #ccc",
            "borderRadius": 4,
            "display": "inline-block",
            "fontSize": 14,
            "marginLeft": 20,
            "marginRight": 10,
            "padding": "7px 7px 7px 12px",
            "width": 220,
          }
        }
        value=""
      />
      <div
        className="Select is-searchable Select--single"
      >
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "marginLeft": 10,
              "width": "10em",
            }
          }
        >
          <span
            className="Select-multi-value-wrapper"
            id="react-select-17--value"
          >
            <div
              className="Select-placeholder"
            >
              Grade...
            </div>
            <div
              className="Select-input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-activedescendant="react-select-17--value"
                aria-expanded="false"
                aria-haspopup="false"
                aria-owns=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={false}
                role="combobox"
                style={
                  Object {
                    "boxSizing": "content-box",
                    "width": "5px",
                  }
                }
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}
          >
            <span
              className="Select-arrow"
              onMouseDown={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
